--- a/outputs/fwdFacingStep/.hydra/config.yaml
+++ b/outputs/fwdFacingStep/.hydra/config.yaml
@@ -1,5 +1,5 @@
 training:
-  max_steps: 10000
+  max_steps: 50000
   grad_agg_freq: 1
   rec_results_freq: 1000
   rec_validation_freq: 1000
@@ -30,7 +30,7 @@ profiler:
   start_step: 0
   end_step: 100
   name: nvtx
-network_dir: ./restart
+network_dir: ./first
 initialization_network_dir: ''
 save_filetypes: vtk
 summary_histograms: false
@@ -78,10 +78,10 @@ scheduler:
   _target_: custom
   _name_: tf.ExponentialLR
   decay_rate: 0.95
-  decay_steps: 4000
+  decay_steps: 10000
 batch_size:
-  TopWall: 1000
+  inlet: 1000
+  outlet: 1000
   NoSlip: 1000
   Interior: 4000
-  interface: 1000
 custom: ???
