--- a/outputs/fwdFacingStep/.hydra/config.yaml
+++ b/outputs/fwdFacingStep/.hydra/config.yaml
@@ -1,5 +1,5 @@
 training:
-  max_steps: 50000
+  max_steps: 500000
   grad_agg_freq: 1
   rec_results_freq: 1000
   rec_validation_freq: 1000
@@ -30,7 +30,7 @@ profiler:
   start_step: 0
   end_step: 100
   name: nvtx
-network_dir: ./first
+network_dir: ./nDim
 initialization_network_dir: ''
 save_filetypes: vtk
 summary_histograms: false
@@ -80,8 +80,8 @@ scheduler:
   decay_rate: 0.95
   decay_steps: 10000
 batch_size:
-  inlet: 1000
-  outlet: 1000
+  inlet: 500
+  outlet: 500
   NoSlip: 1000
-  Interior: 4000
+  Interior: 2000
 custom: ???
