--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -22,28 +22,30 @@ defaults :
   - _self_
 scheduler:
   decay_rate: 0.95
-  decay_steps: 10000
+  decay_steps: 5000
 
-network_dir : "./nDim"
-initialization_network_dir : ""
+network_dir : "./obs2"
+initialization_network_dir : "./obs"
 
 optimizer: 
-  lr: 1e-3                      # Change this based on arch chosen
+  lr: 5e-4                      # Change this based on arch chosen
 
 training:
   rec_validation_freq: 1000
   rec_inference_freq: 2000
   rec_monitor_freq: 1000
   rec_constraint_freq: 2000
+  # max_steps : 200000
   max_steps : 500000
 
 batch_size:
-  inlet: 128
-  outlet: 128
-  NoSlip: 1024
-  Interior: 2048
-  InteriorHR: 3072
-  integralContinuity: 128
+  inlet: 256
+  outlet: 256
+  NoSlip: 2048
+  Interior: 6144
+  # InteriorHR: 4096
+  integralContinuity: 256
+  batchPerEpoch: 1000
 
 graph:
   func_arch: true
