--- a/outputs/fwdFacingStep/.hydra/config.yaml
+++ b/outputs/fwdFacingStep/.hydra/config.yaml
@@ -1,5 +1,5 @@
 training:
-  max_steps: 300000
+  max_steps: 500000
   grad_agg_freq: 1
   rec_results_freq: 1000
   rec_validation_freq: 1000
@@ -30,7 +30,7 @@ profiler:
   start_step: 0
   end_step: 100
   name: nvtx
-network_dir: data1800PlusPhysicsLambda01@300k
+network_dir: pressureDataPlusPhysicsLambda01@500k
 initialization_network_dir: ''
 save_filetypes: vtk
 summary_histograms: false
@@ -88,11 +88,11 @@ batch_size:
   InteriorHR: 2048
   integralContinuity: 512
   batchPerEpoch: 1000
-  batchesData: 1800
+  batchesData: 3600
 custom:
   useData: true
   useHalfData: false
-  pressureDataOnly: false
+  pressureDataOnly: true
   lambda_p_d: 0.1
   lambda_u_d: 0.1
   lambda_v_d: 0.1
