--- a/outputs/fwdFacingStep/data3600PlusPhysicsLambda05@300k/conf/config.yaml
+++ b/outputs/fwdFacingStep/data3600PlusPhysicsLambda05@300k/conf/config.yaml
@@ -29,7 +29,7 @@ run_mode: "train"
 
 #./ = outputs/fwdFacingStep
 
-network_dir: "dataPlusPhysicsLambda05@300k"
+network_dir: "data3600PlusPhysicsLambda05@300k"
 
 # initialization_network_dir : "./"
 
