--- a/outputs/fwdFacingStep/.hydra/config.yaml
+++ b/outputs/fwdFacingStep/.hydra/config.yaml
@@ -1,5 +1,5 @@
 training:
-  max_steps: 500000
+  max_steps: 100000
   grad_agg_freq: 1
   rec_results_freq: 1000
   rec_validation_freq: 1000
@@ -30,7 +30,7 @@ profiler:
   start_step: 0
   end_step: 100
   name: nvtx
-network_dir: physicsOnly@500k
+network_dir: data1800PlusPhysicsLambda01@100k
 initialization_network_dir: init
 save_filetypes: vtk
 summary_histograms: false
@@ -88,9 +88,9 @@ batch_size:
   InteriorHR: 2048
   integralContinuity: 512
   batchPerEpoch: 1000
-  batchesData: 3600
+  batchesData: 1800
 custom:
-  useData: false
+  useData: true
   useHalfData: false
   pressureDataOnly: false
   lambda_p_d: 0.1
