--- a/outputs/fwdFacingStep/.hydra/hydra.yaml
+++ b/outputs/fwdFacingStep/.hydra/hydra.yaml
@@ -114,7 +114,7 @@ hydra:
     - path: hydra.conf
       schema: pkg
       provider: hydra
-    - path: outputs.fwdFacingStep.physicsOnly@500k.conf
+    - path: outputs.fwdFacingStep.data1800PlusPhysicsLambda01@100k.conf
       schema: pkg
       provider: main
     - path: ''
