--- a/outputs/fwdFacingStep/.hydra/config.yaml
+++ b/outputs/fwdFacingStep/.hydra/config.yaml
@@ -3,9 +3,9 @@ training:
   grad_agg_freq: 1
   rec_results_freq: 1000
   rec_validation_freq: 1000
-  rec_inference_freq: 100000
+  rec_inference_freq: 10000
   rec_monitor_freq: 1000
-  rec_constraint_freq: 100000
+  rec_constraint_freq: 1000
   save_network_freq: 1000
   print_stats_freq: 100
   summary_freq: 1000
@@ -30,8 +30,8 @@ profiler:
   start_step: 0
   end_step: 100
   name: nvtx
-network_dir: physicsOnly@500k
-initialization_network_dir: init
+network_dir: Lo01_physicsOnly@500k
+initialization_network_dir: ''
 save_filetypes: vtk
 summary_histograms: false
 jit: true
